--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,6 @@ spring:
     password:
     driver-class-name: org.h2.Driver
 
-
   devtools:
     livereload:
       enabled: false
@@ -13,7 +12,6 @@ spring:
     cache: false
   thymeleaf:
     cache: false
-
 
   jpa:
     hibernate:
@@ -24,12 +22,13 @@ spring:
         format_sql: true
         use_sql_comments: true
 
-
     open-in-view: false
-
-
 
 logging:
   level:
     org.hibernate.SQL: debug
+server:
+  servlet:
+    session:
+      timeout: 1800
 #    org.hibernate.type: trace
