예외페이지 적용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,8 +27,13 @@ spring:
 logging:
   level:
     org.hibernate.SQL: debug
+
 server:
   servlet:
     session:
-      timeout: 1800
+      timeout: 10
+
+  error:
+    whitelabel:
+      enabled: false
 #    org.hibernate.type: trace
