--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,11 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+  #datasource:
+    #url: jdbc:mysql://localhost:3306/shop
+    #username: root
+    #password: 1234
+    #driver-class-name: com.mysql.cj.jdbc.Driver
   devtools:
     livereload:
       enabled: false
@@ -20,13 +25,15 @@ spring:
         show-sql: true
         format_sql: true
         use_sql_comments: true
-
     open-in-view: false
+    #database: mysql
+    #database-platform: org.hibernate.dialect.MySQLDialect
 
 logging:
   level:
     org.hibernate.SQL: debug
-
+    org.apache.coyote.http11: debug
+file.dir: C:/Users/asd/test/
 server:
   servlet:
     session:
