--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,12 +28,15 @@ spring:
     open-in-view: false
     #database: mysql
     #database-platform: org.hibernate.dialect.MySQLDialect
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
 
 logging:
   level:
     org.hibernate.SQL: debug
     org.apache.coyote.http11: debug
-file.dir: C:/Users/asd/test/
 server:
   servlet:
     session:
