--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
         show-sql: true
@@ -40,7 +40,7 @@ logging:
 server:
   servlet:
     session:
-      timeout: 10
+      timeout: 600
 
   error:
     whitelabel:
