구매기능 구현중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,7 +41,7 @@ server:
   servlet:
     session:
       timeout: 600
-
+      tracking-modes: cookie
   error:
     whitelabel:
       enabled: false
