--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/myproject
+    url: jdbc:h2:tcp://localhost/~/MyProject
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -40,7 +40,7 @@ logging:
 server:
   servlet:
     session:
-      timeout: 600
+      timeout: 3600
       tracking-modes: cookie
   error:
     whitelabel:
