--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
   datasource:
     url: jdbc:h2:tcp://localhost/~/MyProject
     username: sa
@@ -19,7 +23,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         show-sql: true
@@ -28,15 +32,13 @@ spring:
     open-in-view: false
     #database: mysql
     #database-platform: org.hibernate.dialect.MySQLDialect
-  servlet:
-    multipart:
-      max-file-size: 100MB
-      max-request-size: 100MB
 
 logging:
   level:
     org.hibernate.SQL: debug
     org.apache.coyote.http11: debug
+
+
 server:
   servlet:
     session:
@@ -50,3 +52,5 @@ server:
     include-binding-errors: always
     include-exception: true
 #    org.hibernate.type: trace
+
+
