--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/shop
     username: root
-    password: 1234
+    password: Vngpgp#1324
     driver-class-name: com.mysql.cj.jdbc.Driver
   devtools:
     livereload:
