--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/shop
     username: root
-    password: Vngpgp#1324
+    password: Rhalsqhd#123
     driver-class-name: com.mysql.cj.jdbc.Driver
   devtools:
     livereload:
