검색 정렬 기능 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,7 @@ spring:
     open-in-view: false
     database: mysql
     database-platform: org.hibernate.dialect.MySQLDialect
+  rsocket:
 
 logging:
   level:
