--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
    #driver-class-name: org.h2.Driver
   datasource:
     url: jdbc:mysql://172.18.0.2/shop
+    #url: jdbc:mysql://localhost/shop
     username: root
     password: Rhalsqhd#123
     driver-class-name: com.mysql.cj.jdbc.Driver
