--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,7 +38,7 @@ spring:
 logging:
   level:
     org.hibernate.SQL: debug
-    org.apache.coyote.http11: info
+    org.apache.coyote.http11: debug
 
 server:
   ssl:
