--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.1'
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
