--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
+
+naver:
+  client_id: S1MikRkeASAoEW5nscCR
+  client_secret: IR9OV_HszV
+  redirect_uri : http://localhost:8081/login/naver/callback
+
 spring:
   servlet:
     multipart:
