--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,10 +26,10 @@ spring:
    #password:
    #driver-class-name: org.h2.Driver
   datasource:
-    url: jdbc:mysql://172.18.0.2/shop
+    url: jdbc:mysql://172.20.0.2/shop
     #url: jdbc:mysql://localhost/shop
-    username: root
-    password: Rhalsqhd#123
+    username: sesac
+    password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
   devtools:
     livereload:
